--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,206 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+.navbar-brand{
+    color: #3755df !important;
+    font-size: 2.9rem !important;
+}
+.nav-link{
+    letter-spacing: 1px;
+}
+.nav-link:hover{
+color: #3755df !important;
+}
+.menu_active{
+    color: #3755df !important;
+    font-weight: bold;
+    border-bottom: 2px solid #3755df;
+}
+.brand-name{
+    color: #3755df;
+    font-size: 2.4rem;
+}
+#header{
+    width: 100%;
+    height: 80vh;
+    margin-top: 70px;
+}
+#header h1{
+    margin: 0px 0px 10px 0;
+    font-size: 52px !important;
+    font-weight: 700;
+    color:black;
+    letter-spacing: -1px;
+}
+#header h5{
+   font-weight: 300;
+   
+}
+#header strong{
+   font-weight: 400; 
+}
+#header .btn-get-started{
+font-weight: 500;
+font-size: 16px !important;
+letter-spacing: 1px;
+display: inline-block;
+padding: 10px 30px !important;
+border-radius: 50px;
+transition: 0.5s;
+color: #3755df;
+border: 2px solid #3755df;
+text-decoration: none;
+}
+#header .btn-get-started:hover{
+    background-color: #3755df;
+    color: #fff;
+}
+.header-image{
+    text-align: right;
+}
+#header .animated{
+    animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+@-webkit-keyframes up-down{
+    0% {
+        transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
+}
+@keyframes up-down{
+    0% {
+        transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Services */
+.bottom-underline{
+    border-bottom: 2px solid #3755df;
+    width: 40%;
+}
+.servicesTxt{
+    font-size: 3.2rem;
+}
+
+/* Media Quire============Small Device to Large Device */
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px){
+    .navbar-toggler{
+        padding: 2px 15px;
+    }
+    .navbar-toggler-icon{
+        font-size: 18px;
+    }
+    #header h1 {
+        margin: 0px 0px 4px 0;
+        font-size: 33px;
+    }
+    #header h5 {
+        font-size: 16px;
+    }
+    #header .btn-get-started {
+        font-size: 13px;
+        padding: 4px 20px;
+        margin-top: -16px;
+    }
+    footer p{
+        font-size: 12px;
+    }
+    footer{
+        margin-top: 5rem;
+    }
+}
+
+@media screen and (min-width: 768px){
+    #header {
+        height: 80vh;
+    }
+    #header h1 {
+        margin: 0px 0px 4px 0;
+        font-size: 35px;
+    }
+    #header h5 {
+        font-size: 17px;
+    }
+    #header .btn-get-started {
+        font-size: 13px;
+        padding: 10px 25px;
+        margin-top: -16px;
+    }
+}
+@media screen and (min-width: 992px){
+    #header {
+        height: 69vh;
+    }
+    #header h1 {
+        margin: 0px 0px 4px 0;
+        font-size: 40px;
+    }
+    #header h5 {
+        font-size: 20px;
+    }
+    #header .btn-get-started {
+        font-size: 16px;
+        padding: 13px 35px;
+        margin-top: -1px;
+    }
+}
+@media screen and (min-width: 1440px){
+    #header {
+        height: 74.5vh;
+    }
+    #header h1 {
+        margin: 0px 0px 4px 0;
+        font-size: 65px;
+    }
+    #header h5 {
+        font-size: 28px;
+    }
+    #header .btn-get-started {
+        font-size: 20px;
+        padding: 13px 38px;
+        margin-top: -1px;
+    }
+}
+@media screen and (min-width: 1280px){
+    #header {
+        height: 75vh;
+    }
+    #header h1 {
+        font-size: 58px;
+    }
+    #header h5 {
+        font-size: 28px;
+    }
+    #header .btn-get-started {
+        font-size: 20px;
+        padding: 13px 38px;
+        margin-top: -1px;
+    }
+}
+@media screen and (min-width: 1024px){
+    #header {
+        height: 83vh;
+    }
+    #header h1 {
+        font-size: 48px;
+    }
+    #header h5 {
+        font-size: 23px;
+    }
+    #header .btn-get-started {
+        font-size: 24px;
+        padding: 13px 38px;
+        margin-top: -1px;
+    }
 }
